# gymnassic.v2

./: .editorconfig  .env.development  .env.development.example  .env.example  .env.production  .env.production.example  .env.testing.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  gym_config.schema.json  gym_profile.example.json  pyproject.toml  run.py  test_extensions_sync.py
app/: __init__.py  extensions.py
app/settings/: __init__.py  config.py  containers.py  databases.py  envcommon.py  gymconf.py  security.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  CONFIGURATION_GUIDE.md  DEPENDENCY_MAPPING.md  QUICK_REFERENCE.md  SETUP_COMPLETE.md
tests/: conftest.py  test_app.py  test_config.py  test_containers.py  test_databases.py  test_envcommon.py  test_extensions.py  test_extensions_sync.py  test_gymconf.py  test_security.py
